	Add --without-{dbi,ldap,radius} options to ./configure
	Made Verbose output of check_sensors compliant (Gabriele Tozzi)
	New switch -E/--extended-perfdata for check_http to print additional performance data (Sebastian Nohn)
	New check_http -d option to specify a string to expect within the response headers
	New check_http -J/-K options for client certificate authentication support
	Add support for executing queries to check_pgsql
	Let check_pgsql accept a UNIX socket directory as hostname
	New check_pgsql -o option to specify additional connection parameters
	New check_fping -S option to specify the source IP address
	New check_fping -I option to specify the interface to bind to
	Let check_fping support IPv6
	New check_procs -k option to ignore kernel threads (on Linux)
	Let check_procs use /proc/<PID>/exe (if available) instead of getpid(2), unless -T is specified
	Let check_mysql support SSL
	Let check_mysql add perfromance metrics for all checks
	New check_mysql -f option to specify a client options file
	New check_mysql -g option to specify a client options group
	New check_snmp --offset option to allow for adding/substracting an offset value to sensor data
	Let check_snmp support an arbitrary number of OIDs
	Let check_ide_smart support NetBSD

	FIXES
	Change the MAIL FROM command generated by check_smtp to be RFC compliant
	Fix compilation of check_http without SSL support
	Fix check_snmp reversed threshold ranges (backward-compatibility)
	Fix check_snmp memory violation when using more than 8 oids (Robin Sonefors)
	Fix check_apt security regular expression (Alex Bradley)
	Fix check_http handling extra header (-k) containing semicolons (Richard Leitner)
	Fix check_apt handling unknown exit codes from apt-get (Richard Leitner)
	Fix deprecated imports of check_nmap.py (Fabio Rueda)

	WARNINGS
	check_http behaviour of -k/--header changed since it does not seperate multiple headers by semicolons anymore. Use multiple -k switches instead.